Updated index.html, scripts.js, and style.css

--- a/index.html
+++ b/index.html
@@ -212,10 +212,10 @@
     <!---Modal Ends Here-->
     <section class="container-fluid bg-body-black p-5 text-center text-white" id="Features">
         <div class="container">
-            <h2>What Makes Our Coffee Special</h2>
+            <h2 class="text-center" data-aos="fade-up" data-aos-anchor-placement="top-center" data-aos-duration="1000">What Makes Our Coffee Special</h2>
             <p>Crafted with care from premium beans to final brew, every sip tells a story.</p>
             <div class="row d-flex align-items-stretch">
-                <div class="col-md-6 col-lg-4 mb-3" data-aos="fade-up" data-aos-anchor-placement="top-center" data-aos-duration="500">
+                <div class="col-md-6 col-lg-4 mb-3">
                     <div class="card shadow-sm rounded bg-black text-white">
                         <div class="card-body p-0">
                             <img src="assets/arabica_handpick.jpg" class="w-100 mb-1" alt="">
@@ -227,7 +227,7 @@
                         </div>
                     </div>
                 </div>
-                 <div class="col-md-6 col-lg-4 mb-3" data-aos="fade-up" data-aos-anchor-placement="top-center" data-aos-duration="500">
+                 <div class="col-md-6 col-lg-4 mb-3">
                     <div class="card shadow-sm rounded bg-black text-white">
                         <div class="card-body p-0">
                             <img src="assets/rich_beans.jpg" class="w-100 mb-1" alt="">
@@ -240,7 +240,7 @@
                     </div>
                 </div>
     
-                <div class="col-md-6 col-lg-4 mb-3" data-aos="fade-up" data-aos-anchor-placement="top-center" data-aos-duration="500">
+                <div class="col-md-6 col-lg-4 mb-3">
                     <div class="card shadow-sm rounded bg-black text-white">
                         <div class="card-body p-0">
                             <img src="assets/roast.jpg" class="w-100 mb-1" alt="">
@@ -252,7 +252,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-6 col-lg-4 mb-3" data-aos="fade-up" data-aos-anchor-placement="top-center" data-aos-duration="500">
+                <div class="col-md-6 col-lg-4 mb-3">
                     <div class="card shadow-sm rounded bg-black text-white">
                         <div class="card-body p-0">
                             <img src="assets/balanced_flavor.jpg" class="w-100 mb-1" alt="">
@@ -265,7 +265,7 @@
                     </div>
                 </div>
 
-                <div class="col-md-6 col-lg-4 mb-3"data-aos="fade-up" data-aos-anchor-placement="top-center" data-aos-duration="500">
+                <div class="col-md-6 col-lg-4 mb-3">
                     <div class="card shadow-sm rounded bg-black text-white">
                         <div class="card-body p-0">
                             <img src="assets/purecoffe.jpg" class="w-100 mb-1" alt="">
@@ -277,7 +277,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-6 col-lg-4 mb-3" data-aos="fade-up" data-aos-anchor-placement="top-center" data-aos-duration="500">
+                <div class="col-md-6 col-lg-4 mb-3">
                     <div class="card shadow-sm rounded bg-black text-white">
                         <div class="card-body p-0">
                             <img src="assets/filtering_coffe.jpg" class="w-100 mb-1" alt="">
@@ -410,9 +410,7 @@
       </div>
     </div>
   </section>
-  
-  
-  
+
 
 <!--Testmonial-->
 <section class="py-5 bg-body-black p-5 text-center " id="Testimonial">
@@ -460,10 +458,48 @@
     </div>
   </div>
 </section>
+
+<!--Frequently Asked Questions-->
+<section class="freq">
+    <h2 class="section-title">Frequently Asked Questions</h2>
+    <details>
+        <summary>What is Deccan Brew?</summary>
+        <p>Deccan Brew is a premium coffee brand made from carefully selected 100% Arabica beans sourced from South Indian plantations, offering a rich aroma and smooth taste.</p>
+    </details>
+    <details>
+        <summary>Are Deccan Brew coffee beans freshly roasted?</summary>
+        <p>Yes. Our coffee beans are freshly roasted in small batches to ensure maximum freshness, flavor, and aroma in every cup.</p>
+    </details>
+    <details>
+        <summary>What type of coffee beans do you use?</summary>
+        <p>We use 100% handpicked Arabica beans known for their balanced flavor, smooth texture, and low bitterness.</p>
+    </details>
+    <details>
+        <summary>Which brewing methods work best with Deccan Brew?</summary>
+        <p>Deccan Brew is suitable for multiple brewing methods, including filter coffee, French press, pour-over, and drip coffee makers.</p>
+    </details>
+    <details>
+        <summary>Does Deccan Brew contain any additives or preservatives?</summary>
+        <p>No. Our coffee is completely natural and free from additives, artificial flavors, or preservatives.</p>
+    </details>
+    <details>
+        <summary>How should I store Deccan Brew coffee?</summary>
+        <p>Store your coffee in an airtight container, away from sunlight, heat, and moisture to maintain freshness.</p>
+    </details>
+    <details>
+        <summary>Is Deccan Brew suitable for daily consumption?</summary>
+        <p>Yes. Deccan Brew offers a smooth, rich taste that is gentle and perfect for everyday coffee lovers.</p>
+    </details>
+    <details>
+        <summary>How can I contact Deccan Brew?</summary>
+        <p>You can reach us through the Contact Us section on our website or via email for any queries or bulk orders.</p>
+    </details>
+</section>
+
 <!--form-->
     <section class="container p-5">
         <div class="col-lg-6 p-5 pt-0 shadow mx-auto text-center" data-aos="fade-up" data-aos-anchor-placement="top-center" data-aos-duration="1000">
-            <h2 class="mb-4" data-aos="fade-up" data-aos-anchor-placement="top-center" data-aos-duration="1000">Contact Us</h2>
+            <h2 class=" title mb-4" data-aos="fade-up" data-aos-anchor-placement="top-center" data-aos-duration="1000">Contact Us</h2>
             <form name= "contact" action ="submit.html" onsubmit="return validate()">
                 <input type ="text" name="username" class="form-control mb-3" placeholder="Enter Name">
                 <p id="nameError"></p>
@@ -490,14 +526,16 @@
     <script src="scripts.js"></script>
 
 </section>
+
+<!--footer-->
 <footer class="bg-dark text-light pt-5">
     <div class="container">
       <div class="row">
   
         <!-- Brand -->
         <div class="col-md-4 mb-4 text-center">
-          <h4 class="fw-bold">Deccan Brew</h4>
-          <p class="text-light">
+            <h4 class="fw-bold">Deccan<span class="text-brown">Brew</span> </h4>
+            <p class="text-light">
              Crafted from premium Arabica beans, Deccan Brew 
              delivers a smooth,
              rich coffee experience inspired by South India. 
