--- a/index.html
+++ b/index.html
@@ -36,11 +36,11 @@
                            <a href="#Features" class="nav-link fw-bold">Features</a>
                         </li>
                         <li class="nav-item">
-                           <a href="#Benfits" class="nav-link fw-bold">Benfits</a>
+                           <a href="#Testimonial" class="nav-link fw-bold">Testimonials</a>
                         </li>
                         <li class="nav-item">
-                           <a href="#Testimonial" class="nav-link fw-bold">Testimonial</a>
-                        </li>
+                            <a href="#Contact" class="nav-link fw-bold">Contact</a>
+                         </li>
                     </ul>
                 </div>
             </div>
@@ -295,7 +295,7 @@
     </section>
 
     <!---benfits-->
-    <section id="Benfits" class="py-5">
+    <section class="py-5">
     <div class="container">
         <h2 class="text-center mb-4 mt-0" data-aos="fade-up" data-aos-anchor-placement="top-center" data-aos-duration="1000">The Deccan Brew Difference</h2>
 
@@ -461,7 +461,7 @@
 
 <!--Frequently Asked Questions-->
 <section class="freq">
-    <h2 class="section-title">Frequently Asked Questions</h2>
+    <h2 class="section-title" data-aos="fade-up" data-aos-anchor-placement="top-center" data-aos-duration="1000">Frequently Asked Questions</h2>
     <details>
         <summary>What is Deccan Brew?</summary>
         <p>Deccan Brew is a premium coffee brand made from carefully selected 100% Arabica beans sourced from South Indian plantations, offering a rich aroma and smooth taste.</p>
@@ -497,7 +497,7 @@
 </section>
 
 <!--form-->
-    <section class="container p-5">
+    <section class="container p-5" id="Contact">
         <div class="col-lg-6 p-5 pt-0 shadow mx-auto text-center" data-aos="fade-up" data-aos-anchor-placement="top-center" data-aos-duration="1000">
             <h2 class=" title mb-4" data-aos="fade-up" data-aos-anchor-placement="top-center" data-aos-duration="1000">Contact Us</h2>
             <form name= "contact" action ="submit.html" onsubmit="return validate()">
@@ -563,7 +563,7 @@
         <div class="col-md-4 mb-4 text-center">
           <h5 class="fw-semibold">Contact Us</h5>
           <p class="mb-1">📍 Telangana, India</p>
-          <p class="mb-1">📧 support@deccanbrew.com</p>
+          <p class="mb-1">&#x2709; support@deccanbrew.com</p>
           <p class="mb-1">📞 +91 9789654320</p>
           <p class="mb-1">🕒 Mon – Sat : 9 AM – 7 PM </p>
 
